--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
                 username: document.getElementById('username').value
             };
 
-            const response = await fetch('http://localhost:3000/api/tasks', {
+            const response = await fetch('/api/tasks', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
