--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Create Task - Testing</h1>
+        <h1>Create Task</h1>
         <form id="taskForm">
             <label for="eventDate">Event Date:</label>
             <input type="datetime-local" id="eventDate" name="eventDate" required>
