--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
             <button type="submit">Create Task</button>
         </form>
+        <button id="loginButton">Login</button>
     </div>
 
     <script>
@@ -50,6 +51,10 @@
 
             const result = await response.json();
             alert(result.message);
+        });
+
+        document.getElementById('loginButton').addEventListener('click', function() {
+            window.location.href = '/login.html';
         });
     </script>
 </body>
