--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,11 @@
             const result = await response.json();
             const notification = document.getElementById('notification');
             notification.textContent = result.message;
+            if (response.status === 200) {
+                notification.style.backgroundColor = '#28a745'; // Green for success
+            } else {
+                notification.style.backgroundColor = '#dc3545'; // Red for error
+            }
             notification.style.display = 'block';
             setTimeout(() => {
                 notification.style.display = 'none';
